apps/tencentcloud/jenkins/post/_base/policies/tests/inject-do-not-evict/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-agent
  namespace: jenkins-tidb
  labels:
    kubernetes.jenkins.io/controller: ""
spec:
  containers:
    - name: jnlp
      image: busybox:1.36
