apps/tencentcloud/jenkins/post/_base/policies/tests/inject-do-not-evict/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: inject-do-not-evict
policies:
  - ../../inject-do-not-evict.yaml
resources:
  - resource.yaml
results:
  - policy: inject-do-not-evict
    rule: inject-do-not-evict
    resources:
      - pod-agent
    kind: Pod
    result: pass
